# general_discord_bot

./: .cache  .gitignore  .gitignore~  .replit  README.md  colors.py  config.json  config.py  config.py~  config.toml  config.toml~  example_config.json  example_config.toml  main.py  main.py~  output.json  output.txt  prybar-python3  pyproject.toml  replit.nix  utilities.py
cogs/LevelSystem/: levels.json  levels.json~  levelsystem.py  levelsystem.py~  server_level_system_enabler.json
cogs/Moderation/: moderation.py  moderation.py~  mute_roles.json  server_word_blacklists.json  server_word_blacklists.json~  unmute_times.json
cogs/Music/: music.py  music.py~  queue.py  queue.py~  song_queue.py  song_queue.py~  utilities.py
cogs/Unbound/: helperfunctions.py  unbound.py  unbound_data.py
